[gd_scene load_steps=7 format=3 uid="uid://qm5ypjmka0mn"]

[ext_resource type="Script" path="res://scenes/level.gd" id="1_0fp5q"]
[ext_resource type="Texture2D" uid="uid://ch53sq6c51rt" path="res://graphics/white.png" id="2_8a0ei"]
[ext_resource type="PackedScene" uid="uid://buqvkbl78bj0t" path="res://scenes/ui/ui.tscn" id="2_ir7t0"]
[ext_resource type="PackedScene" uid="uid://cds5gfren3o1o" path="res://scenes/ui/gameover.tscn" id="4_2hcnw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdakj"]
size = Vector2(536, 99)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8m2h"]
size = Vector2(709, 14)

[node name="Level" type="Node2D"]
process_mode = 1
script = ExtResource("1_0fp5q")
rand_limit_contain = 0.5
metadata/_edit_vertical_guides_ = [76.0, 175.0, 275.0, 375.0]

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.101961, 0.101961, 0.101961, 1)
position = Vector2(590, 14)
rotation = 3.14159
scale = Vector2(4.13254, -8.40497)
texture = ExtResource("2_8a0ei")

[node name="Alphabet" type="Node2D" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="AlphabetSpawnLocations" type="Node2D" parent="."]
position = Vector2(0, 80)

[node name="Marker2D" type="Marker2D" parent="AlphabetSpawnLocations"]
position = Vector2(75, 48)

[node name="Marker2D2" type="Marker2D" parent="AlphabetSpawnLocations"]
position = Vector2(275, 48)

[node name="Marker2D3" type="Marker2D" parent="AlphabetSpawnLocations"]
position = Vector2(175, 48)

[node name="Marker2D4" type="Marker2D" parent="AlphabetSpawnLocations"]
position = Vector2(375, 48)

[node name="EnemySpawnLocations" type="Node2D" parent="."]
position = Vector2(0, 680)

[node name="1" type="Marker2D" parent="EnemySpawnLocations"]
position = Vector2(75, 48)

[node name="2" type="Marker2D" parent="EnemySpawnLocations"]
position = Vector2(275, 48)

[node name="3" type="Marker2D" parent="EnemySpawnLocations"]
position = Vector2(175, 48)

[node name="4" type="Marker2D" parent="EnemySpawnLocations"]
position = Vector2(375, 48)

[node name="EnemyCooldown" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="EndOfScreen" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndOfScreen"]
position = Vector2(234, 856)
shape = SubResource("RectangleShape2D_fdakj")

[node name="GameOver" type="Area2D" parent="."]
position = Vector2(0, 2)
collision_layer = 2
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOver"]
position = Vector2(201.5, 246)
shape = SubResource("RectangleShape2D_h8m2h")

[node name="UI" parent="." instance=ExtResource("2_ir7t0")]

[node name="Gameover" parent="." instance=ExtResource("4_2hcnw")]
visible = false

[connection signal="child_exiting_tree" from="Alphabet" to="." method="_on_alphabet_child_exiting_tree"]
[connection signal="timeout" from="EnemyCooldown" to="." method="_on_enemy_cooldown_timeout"]
[connection signal="body_entered" from="EndOfScreen" to="." method="_on_end_of_screen_body_entered"]
[connection signal="area_shape_entered" from="GameOver" to="." method="_on_game_over_area_shape_entered"]
